# iRRLS

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: Normalizer_config.ini  Normalizer_config_SIM.ini  RFmapper_config.ini  RFmapper_config_SIM.ini  RRLSestimator_config.ini  RRLSestimator_config_SIM.ini  RandMotion_config.ini  RandMotion_config_SIM.ini  Synchronizer_config.ini  Synchronizer_config_SIM.ini  reachCtrl.ini
app/conf/proj/: proj500.ini
app/scripts/: RBDemo.xml.template  RBDemoAPP.xml  RBDemoAPP.xml.template  RBDemoAPP_iCubSim.xml  RBDemoAPP_iCubSim.xml.template  iRRLS.xml  iRRLS_SIM.xml  signalsCombiner.lua  signalsMask.lua  yarpscope_avgRMSE.xml  yarpscope_forces_out.xml  yarpscope_torques_out.xml
modules/: CMakeLists.txt
modules/Normalizer/: CMakeLists.txt  Normalizer.xml
modules/Normalizer/src/: Normalizer.cpp
modules/RFmapper/: CMakeLists.txt  RFmapper.cpp  RFmapper.xml
modules/RFmapper/src/: RFmapper.cpp
modules/RRLSestimator/: CMakeLists.txt  RRLSestimator.xml  recursiveRLS_id_chol.cpp
modules/RRLSestimator/src/: RRLSestimator.cpp
modules/RandMotion/: CMakeLists.txt  RandMotion.xml
modules/RandMotion/src/: RandMotion.cpp
modules/Synchronizer/: CMakeLists.txt  Synchronizer.xml
modules/Synchronizer/src/: Synchronizer.cpp
modules/parametricEstimator/: CMakeLists.txt  CMakeLists2.txt  parametricEstimator.xml
modules/parametricEstimator/src/: iCubParis02_simple_analysis.cpp  parametricEstimator.cpp
