# Copyright: (C) 2014 RobotCub Consortium
# Author: Raffaello Camoriano
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(RFmapper)
add_subdirectory(Synchronizer)
add_subdirectory(Normalizer)
add_subdirectory(RRLSestimator)
add_subdirectory(RandMotion)
add_subdirectory(parametricEstimator)
